WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39432
Leak of CFData in MediaPlayerPrivateQuickTimeVisualContext
https://bugs.webkit.org/show_bug.cgi?id=39432
Summary
Leak of CFData in MediaPlayerPrivateQuickTimeVisualContext
Adam Roben (:aroben)
Reported
2010-05-20 10:06:53 PDT
The QTCFDictionaryCreateWithDataCallback function in MediaPlayerPrivateQuickTimeVisualContext.cpp leaks the CFData it creates.
Attachments
Fix a CFData leak in MediaPlayerPrivateQuickTimeVisualContext
(2.12 KB, patch)
2010-05-20 10:14 PDT
,
Adam Roben (:aroben)
adachan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-05-20 10:07:22 PDT
<
rdar://problem/8008992
>
Adam Roben (:aroben)
Comment 2
2010-05-20 10:14:53 PDT
Created
attachment 56607
[details]
Fix a CFData leak in MediaPlayerPrivateQuickTimeVisualContext
Adam Roben (:aroben)
Comment 3
2010-05-20 11:54:15 PDT
Committed
r59853
: <
http://trac.webkit.org/changeset/59853
>
WebKit Review Bot
Comment 4
2010-05-20 12:40:17 PDT
http://trac.webkit.org/changeset/59853
might have broken Tiger Intel Release The following changes are on the blame list:
http://trac.webkit.org/changeset/59850
http://trac.webkit.org/changeset/59851
http://trac.webkit.org/changeset/59852
http://trac.webkit.org/changeset/59853
http://trac.webkit.org/changeset/59854
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug